Ajustes feitos para melhor utilização do Casbin
