# internal/domain/models/security_model.go
@@ -4,67 +4,57 @@ package models
 
 import (
 	"github.com/google/uuid"
-	"github.com/jeancarlosdanese/go-base-api/internal/domain/enums"
 )
 
-// Entry representa um recurso no sistema que pode ser acessado por usuários.
-type Entry struct {
+// Endpoint representa um recurso no sistema que pode ser acessado por usuários.
+type Endpoint struct {
 	ID   uint   `gorm:"primarykey" validate:"required" json:"id"`
-	Name string `gorm:"type:varchar(36);not null;unique" validate:"required" json:"name"` // Nome do recurso, único e não nulo
-}
-
-// Permission representa um papel no sistema.
-type Permission struct {
-	ID      uint             `gorm:"primarykey" validate:"required" json:"id"`
-	EntryID uint             `gorm:"not null;uniqueIndex:uni_permissions_entry_id_action" validate:"required" json:"entry_id"`
-	Action  enums.ActionType `gorm:"type:action_type;not null;validate:required,actionType;uniqueIndex:uni_permissions_entry_id_action" json:"action"`
-	Roles   []*Role          `gorm:"many2many:permissions_roles;" json:"roles,omitempty"`
-	Users   []*User          `gorm:"many2many:permissions_users;" json:"users,omitempty"`
-
-	// constraints
-	Entry *Entry `gorm:"foreignKey:EntryID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
+	Name string `gorm:"type:varchar(254);not null;unique" validate:"required" json:"name"` // Nome do recurso, único e não nulo
 }
 
 // Role representa um papel no sistema.
 type Role struct {
-	ID          uint          `gorm:"primarykey" validate:"required" json:"id"`
-	Name        string        `gorm:"type:varchar(36);not null;unique" validate:"required" json:"name"` // Nome do recurso, único e não nulo
-	Permissions []*Permission `gorm:"many2many:permissions_roles;" json:"permissions,omitempty"`
+	ID   uint   `gorm:"primarykey" validate:"required" json:"id"`
+	Name string `gorm:"type:varchar(36);not null;unique" validate:"required" json:"name"` // Nome do recurso, único e não nulo
+
+	Policies []*PolicyRole `gorm:"many2many:policies_roles;" json:"policies,omitempty"`
 }
 
-type PermissionRole struct {
-	PermissionID uint `gorm:"not null;primarykey" validate:"required" json:"permission_id"`
-	RoleID       uint `gorm:"not null;primarykey" validate:"required" json:"role_id"`
+type PolicyRole struct {
+	RoleID     uint   `gorm:"not null;primarykey;" validate:"required" json:"role_id"`
+	EndpointID uint   `gorm:"not null;primarykey;" validate:"required" json:"endpoint_id"`
+	Actions    string `gorm:"type:varchar(36);not null;" validate:"required" json:"actions"`
 
-	// constraints
-	Permission *Permission `gorm:"foreignKey:PermissionID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
-	Role       *Role       `gorm:"foreignKey:RoleID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
-}
-
-// TableName especifica o nome da tabela para GORM.
-func (PermissionRole) TableName() string {
-	return "permissions_roles"
-}
-
-// PermissionUser representa permissões especiais atribuídas a um usuário para um recurso específico.
-type PermissionUser struct {
-	PermissionID uint `gorm:"not null;primarykey" validate:"required" json:"permission_id"`
-	UserID       uint `gorm:"not null;primarykey" validate:"required" json:"user_id"`
-
-	// constraints
-	Permission *Permission `gorm:"foreignKey:PermissionID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
-	User       *User       `gorm:"foreignKey:UserID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
+	// // constraints
+	Role     *Role     `gorm:"foreignKey:RoleID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
+	Endpoint *Endpoint `gorm:"foreignKey:EndpointID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
 }
 
 // TableName especifica o nome da tabela para GORM.
-func (PermissionUser) TableName() string {
-	return "permissions_users"
+func (PolicyRole) TableName() string {
+	return "policies_roles"
+}
+
+// PolicyUser representa permissões especiais atribuídas a um usuário para um recurso específico.
+type PolicyUser struct {
+	UserID     uuid.UUID `gorm:"not null;primarykey;" validate:"required" json:"user_id"`
+	EndpointID uint      `gorm:"not null;primarykey;" validate:"required" json:"endpoint_id"`
+	Actions    string    `gorm:"type:varchar(36);not null;" validate:"required" json:"actions"`
+
+	// // constraints
+	User     *User     `gorm:"foreignKey:UserID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
+	Endpoint *Endpoint `gorm:"foreignKey:EndpointID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
+}
+
+// TableName especifica o nome da tabela para GORM.
+func (PolicyUser) TableName() string {
+	return "policies_users"
 }
 
 // UserRole representa permissões especiais atribuídas a um usuário para um recurso específico.
 type UserRole struct {
-	UserID uuid.UUID `gorm:"not null;primarykey" validate:"required" json:"user_id"`
-	RoleID uint      `gorm:"not null;primarykey" validate:"required" json:"role_id"`
+	UserID uuid.UUID `gorm:"not null;primarykey;" validate:"required" json:"user_id"`
+	RoleID uint      `gorm:"not null;primarykey;" validate:"required" json:"role_id"`
 
 	// constraints
 	User *User `gorm:"foreignKey:UserID;constraint:OnUpdate:RESTRICT,OnDelete:RESTRICT;"`
